# jupad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
jupad/: __init__.py  __main__.py
jupad/tests/: test_jupad.py
pypad/: __init__.py  __main__.py  utils.py
pypad/tests/: test_pypad.py
