[project]
name = "jupad"  
version = "0.0.0" 
description = "Python Notepad" 
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["development"] 
authors = [
  {name = "Idan Pazi", email = "idan.kp@gmail.com" } 
]
classifiers = [  
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [ 
  "ipython",
  "qtconsole",
  "PyQt6",
  "ansi2html",
]

[project.urls]  
"Homepage" = "https://github.com/idanpa/jupad"
"Bug Reports" = "https://github.com/idanpa/jupad/issues"
"Source" = "https://github.com/idanpa/jupad"

[project.gui-scripts]
jupad = "jupad.__main__:main"

[tool.setuptools]
packages = ["jupad"]
package-data = {"*" = ["resources/*.svg"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
